--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "laravel": "^0.0.1",
+    "laravel-vite-plugin": "^0.8.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
